<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.guidin.Acelerometro$PlaceholderFragment">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:background="#FFFFFF">
        <TableRow>
            <TextView
                android:text="@string/acc_en_x"
                android:width ="120dp"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccX"
                android:width="100dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/acc_en_y"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccY"
                android:width="100dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/acc_en_z"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccZ"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/g_sobre_eje_x"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtGiroX"
                android:width="100dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/g_sobre_eje_y"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtGiroY"
                android:width="100dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/g_sobre_eje_z"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtGiroZ"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/giro_valido"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtGiroValido"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/acc_norm_eje_x"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"
                />
            <TextView
                android:id="@+id/txtAccXSuelo"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/acc_norm_eje_y"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccYSuelo"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/acc_norm_eje_z"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccZSuelo"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/acc_x_mapa"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccXMapa"
                android:width="100dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp">
            <TextView
                android:text="@string/acc_y_mapa"
                android:textStyle="bold"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="#001111"/>
            <TextView
                android:id="@+id/txtAccYMapa"
                android:width="100dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
