<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.guidin.Registro">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/textViewName"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:id="@+id/textViewLastName"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textViewName"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignStart="@+id/textViewName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textViewUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="25dp"
        android:layout_below="@+id/textViewLastName"
        android:layout_alignLeft="@+id/textViewLastName"
        android:layout_alignStart="@+id/textViewLastName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:id="@+id/textViewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="25dp"
        android:layout_below="@+id/textViewUser"
        android:layout_alignLeft="@+id/textViewLastName"
        android:layout_alignStart="@+id/textViewLastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerName"
        android:width="130dp"
        android:inputType="text"
        android:layout_above="@+id/textViewLastName"

        android:layout_alignTop="@+id/textViewName"
        android:layout_alignRight="@+id/registerSurname"
        android:layout_alignEnd="@+id/registerSurname"
        android:layout_alignLeft="@+id/registerSurname"
        android:layout_alignStart="@+id/registerSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerSurname"
        android:inputType="text"
        android:width="130dp"
        android:layout_alignBottom="@+id/textViewLastName"
        android:layout_alignLeft="@+id/registerUser"
        android:layout_alignStart="@+id/registerUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/registerUser"
        android:width="130dp"
        android:layout_alignBottom="@+id/textViewUser"
        android:layout_alignLeft="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword"
        android:width="130dp"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignLeft="@+id/buttonCancel"
        android:layout_alignStart="@+id/buttonCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_aceptar"
        android:id="@+id/buttonAccept"
        android:layout_below="@+id/textViewPassword"
        android:layout_alignRight="@+id/textViewPassword"
        android:layout_alignEnd="@+id/textViewPassword"
        android:layout_marginTop="150dp"
        android:layout_alignLeft="@+id/textViewPassword"
        android:layout_alignStart="@+id/textViewPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cancelar"
        android:id="@+id/buttonCancel"
        android:layout_alignTop="@+id/buttonAccept"
        android:layout_toRightOf="@+id/buttonAccept"
        android:layout_marginLeft="38dp"
        android:width="130dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="15dp"
        android:text="Seleccione los elementos que su discapacidad le permite superar:"
        android:id="@+id/textViewSuperables"
        android:layout_below="@+id/textViewPassword"
        android:layout_alignLeft="@+id/escaleras"
        android:layout_alignStart="@+id/escaleras" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escaleras"
        android:id="@+id/escaleras"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewSuperables"
        android:layout_alignLeft="@+id/textViewPassword"
        android:layout_alignStart="@+id/textViewPassword"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ascensor"
        android:id="@+id/ascensor"
        android:layout_below="@+id/escaleras"
        android:layout_alignLeft="@+id/escaleras"
        android:layout_alignStart="@+id/escaleras"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puerta"
        android:id="@+id/puerta"
        android:onClick="onCheckboxClicked"
        android:layout_alignTop="@+id/escaleras"
        android:layout_alignLeft="@+id/buttonCancel"
        android:layout_alignStart="@+id/buttonCancel" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rampa"
        android:id="@+id/rampa"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/puerta"
        android:layout_alignLeft="@+id/puerta"
        android:layout_alignStart="@+id/puerta" />



</RelativeLayout>
