<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.guidin.Login">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:id="@+id/textViewTittle"
    android:textSize="50dp"
    android:layout_marginTop="40dp"
    android:textColor="#ff687dff"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_longname"
        android:id="@+id/textViewSubTittle"
        android:textSize="15dp"
        android:textColor="#ff687dff"
        android:layout_below="@+id/textViewTittle"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textViewUser"
        android:textSize="25dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textViewTittle"
        android:layout_toLeftOf="@+id/textViewTittle"
        android:layout_toStartOf="@+id/textViewTittle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:id="@+id/textViewPassword"
        android:layout_marginTop="45dp"
        android:textSize="25dp"
        android:layout_below="@+id/textViewUser"
        android:layout_alignLeft="@+id/textViewUser"
        android:layout_alignStart="@+id/textViewUser"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editTextUser"
        android:width="150dp"
        android:layout_alignTop="@+id/textViewUser"
        android:layout_toRightOf="@+id/textViewPassword"
        android:layout_toEndOf="@+id/textViewPassword"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextUser"
        android:layout_alignStart="@+id/editTextUser"
        android:layout_alignRight="@+id/editTextUser"
        android:layout_alignEnd="@+id/editTextUser"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignTop="@+id/textViewPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar_credenciales"
        android:id="@+id/checkBoxcredentials"
        android:layout_below="@+id/textViewPassword"
        android:layout_alignLeft="@+id/textViewPassword"
        android:layout_alignStart="@+id/textViewPassword"
        android:layout_marginTop="54dp"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/buttonLogin"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/checkBoxcredentials"
        android:layout_toLeftOf="@+id/editTextUser"
        android:layout_toStartOf="@+id/editTextUser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resgistrarse"
        android:id="@+id/buttonRegister"
        android:layout_alignTop="@+id/buttonLogin"
        android:layout_toRightOf="@+id/checkBoxcredentials"
        android:layout_toEndOf="@+id/checkBoxcredentials" />


</RelativeLayout>


